spacing bug fixed

--- a/src/student/components/createpost/index.css
+++ b/src/student/components/createpost/index.css
@@ -43,3 +43,8 @@
    
   }
 }
+@media screen and (max-width:400px){
+  .contentBox {
+  padding: 3rem 0rem;
+  }
+}
